--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
     "Webpack 4"
   ],
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --progress",
-    "staging": "cross-env NODE_ENV=staging webpack",
-    "build": "cross-env NODE_ENV=production webpack"
+    "open_browser": "node src/open-browser",
+    "build_browser": "webpack --config build/deploy/webpack.browser-frontend.config.js",
+    "build_user_interface": "webpack --config build/webpack.browser.config.js",
+    "build": "npm run build_browser && npm run build_user_interface",
+    "test": "npm run build_browser && npm run open_browser",
+    "dev": "webpack-dev-server --config=./build/webpack.browser-hot-loader.config.js --content-base dist --hot --inline"
   },
   "dependencies": {
     "@babel/polyfill": "~7.2",
@@ -22,15 +25,19 @@
     "@babel/plugin-syntax-dynamic-import": "~7.2",
     "@babel/plugin-syntax-import-meta": "~7.2",
     "@babel/preset-env": "~7.3",
+    "autoprefixer": "^9.7.3",
     "babel-eslint": "~10.0",
     "babel-loader": "~8.0",
     "compression-webpack-plugin": "~2.0",
+    "copy-webpack-plugin": "^5.1.1",
     "cross-env": "~5.2",
     "css-loader": "~2.1",
+    "extract-text-webpack-plugin": "^3.0.2",
     "friendly-errors-webpack-plugin": "~1.7",
     "html-webpack-plugin": "~3.2",
     "mini-css-extract-plugin": "~0.5",
     "node-sass": "~4.12",
+    "open-browser-webpack-plugin": "0.0.5",
     "optimize-css-assets-webpack-plugin": "~5.0",
     "sass-loader": "~7.1",
     "uglifyjs-webpack-plugin": "~1.2",
