--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "dependencies": {
     "@babel/polyfill": "~7.2",
     "vue": "~2.6",
-    "vue-router": "~3.0"
+    "vue-clickaway": "^2.2.2",
+    "vue-router": "~3.0",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@babel/core": "~7.2",
