--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "~7.2",
+    "file-saver": "^2.0.2",
     "vue": "~2.6",
     "vue-clickaway": "^2.2.2",
     "vue-router": "~3.0",
