--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@babel/polyfill": "~7.2",
     "file-saver": "^2.0.2",
+    "v-tooltip": "^2.0.2",
     "vue": "~2.6",
     "vue-clickaway": "^2.2.2",
     "vue-router": "~3.0",
