--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
     "Webpack 4"
   ],
   "scripts": {
-    "open_browser": "node src/open-browser",
     "build_browser": "webpack --config build/deploy/webpack.browser-frontend.config.js",
     "build_user_interface": "webpack --config build/webpack.browser.config.js",
     "build": "npm run build_browser && npm run build_user_interface",
-    "test": "npm run build_browser && npm run open_browser",
+    "test": "npm run build_browser",
     "dev": "webpack-dev-server --config=./build/webpack.browser-hot-loader.config.js --content-base dist --hot --inline"
   },
   "dependencies": {
     "@babel/polyfill": "~7.2",
     "file-saver": "^2.0.2",
+    "qrcanvas-vue": "^2.0.3",
     "v-tooltip": "^2.0.2",
     "vue": "~2.6",
     "vue-clickaway": "^2.2.2",
@@ -32,7 +32,7 @@
     "autoprefixer": "^9.7.3",
     "babel-eslint": "~10.0",
     "babel-loader": "~8.0",
-    "compression-webpack-plugin": "~2.0",
+    "compression-webpack-plugin": "^3.0.1",
     "copy-webpack-plugin": "^5.1.1",
     "cross-env": "~5.2",
     "css-loader": "~2.1",
@@ -41,7 +41,6 @@
     "html-webpack-plugin": "~3.2",
     "mini-css-extract-plugin": "~0.5",
     "node-sass": "~4.12",
-    "open-browser-webpack-plugin": "0.0.5",
     "optimize-css-assets-webpack-plugin": "~5.0",
     "sass-loader": "~7.1",
     "uglifyjs-webpack-plugin": "~1.2",
