--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "@babel/polyfill": "~7.2",
     "file-saver": "^2.0.2",
-    "qrcanvas-vue": "^2.0.3",
+    "qrcode-vue": "^1.2.0",
     "v-tooltip": "^2.0.2",
     "vue": "~2.6",
     "vue-clickaway": "^2.2.2",
