--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "vue-clickaway": "^2.2.2",
     "vue-notification": "^1.3.20",
     "vue-qrcode-reader": "^2.1.1",
-    "vue-router": "~3.0",
+    "vue-router": "^3.0.7",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
