--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "v-tooltip": "^2.0.2",
     "vue": "~2.6",
     "vue-clickaway": "^2.2.2",
+    "vue-clipboard2": "^0.3.1",
     "vue-notification": "^1.3.20",
     "vue-qrcode-reader": "^2.1.1",
     "vue-router": "^3.0.7",
