--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build_user_interface": "webpack --config build/webpack.browser.config.js",
     "build": "npm run build_browser && npm run build_user_interface",
     "test": "npm run build_browser",
-    "dev": "webpack-dev-server --config=./build/webpack.browser-hot-loader.config.js --content-base dist --hot --inline"
+    "dev": "webpack-dev-server --config=./build/webpack.browser-hot-loader.config.js --content-base dist --hot --inline --host 0.0.0.0"
   },
   "dependencies": {
     "@babel/polyfill": "~7.2",
