--- a/package.json
+++ b/package.json
@@ -15,16 +15,16 @@
   "dependencies": {
     "@babel/polyfill": "~7.2",
     "axios": "^0.19.2",
-    "file-saver": "^2.0.2",
+    "file-saver": "^2.0.5",
     "qrcode-vue": "^1.2.0",
-    "v-tooltip": "^2.0.2",
-    "vue": "~2.6",
+    "v-tooltip": "^2.1.2",
+    "vue": "^2.6.12",
     "vue-clickaway": "^2.2.2",
     "vue-clipboard2": "^0.3.1",
     "vue-notification": "^1.3.20",
-    "vue-qrcode-reader": "^2.1.1",
-    "vue-router": "^3.0.7",
-    "vuex": "^3.1.2"
+    "vue-qrcode-reader": "^2.3.16",
+    "vue-router": "^3.4.9",
+    "vuex": "^3.6.0"
   },
   "devDependencies": {
     "@babel/core": "~7.2",
@@ -34,23 +34,23 @@
     "@babel/plugin-syntax-dynamic-import": "~7.2",
     "@babel/plugin-syntax-import-meta": "~7.2",
     "@babel/preset-env": "~7.3",
-    "autoprefixer": "^9.7.3",
+    "autoprefixer": "^9.8.6",
     "babel-eslint": "~10.0",
     "babel-loader": "~8.0",
-    "compression-webpack-plugin": "^3.0.1",
-    "copy-webpack-plugin": "^5.1.1",
+    "compression-webpack-plugin": "^3.1.0",
+    "copy-webpack-plugin": "^5.1.2",
     "cross-env": "~5.2",
     "css-loader": "~2.1",
     "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^5.0.2",
+    "file-loader": "^5.1.0",
     "friendly-errors-webpack-plugin": "~1.7",
     "html-webpack-plugin": "~3.2",
     "mini-css-extract-plugin": "~0.5",
-    "optimize-css-assets-webpack-plugin": "~5.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
     "uglifyjs-webpack-plugin": "~1.2",
     "vue-loader": "~15.6",
     "vue-style-loader": "~4.1",
-    "vue-template-compiler": "~2.6",
+    "vue-template-compiler": "^2.6.12",
     "webpack": "~4.29",
     "webpack-bundle-analyzer": "~3.3",
     "webpack-cli": "~3.2",
