--- a/package.json
+++ b/package.json
@@ -15,17 +15,18 @@
   },
   "dependencies": {
     "@babel/polyfill": "~7.2",
-    "axios": "^0.19.2",
+    "axios": "^0.21.1",
     "file-saver": "^2.0.5",
     "qrcode-vue": "^1.2.0",
+    "strength": "^0.1.4",
     "v-tooltip": "^2.1.2",
     "vue": "^2.6.12",
     "vue-clickaway": "^2.2.2",
     "vue-clipboard2": "^0.3.1",
     "vue-notification": "^1.3.20",
     "vue-qrcode-reader": "^2.3.16",
-    "vue-router": "^3.4.9",
-    "vuex": "^3.6.0"
+    "vue-router": "^3.5.1",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@babel/core": "~7.2",
@@ -35,10 +36,11 @@
     "@babel/plugin-syntax-dynamic-import": "~7.2",
     "@babel/plugin-syntax-import-meta": "~7.2",
     "@babel/preset-env": "~7.3",
+    "@webpack-cli/serve": "^1.3.0",
     "autoprefixer": "^9.8.6",
     "babel-eslint": "~10.0",
     "babel-loader": "~8.0",
-    "compression-webpack-plugin": "^3.1.0",
+    "compression-webpack-plugin": "^7.1.2",
     "copy-webpack-plugin": "^5.1.2",
     "cross-env": "~5.2",
     "css-loader": "~2.1",
