improving wallet webpack

--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
     "DEX"
   ],
   "scripts": {
-    "build-browser": "webpack --config build/deploy/webpack.browser-frontend.config.js",
-    "build-browser-analyzer": "webpack --config build/deploy/webpack.browser-frontend.config.js --mode development --analyzer",
-    "build-user-interface": "webpack --config build/webpack.browser.config.js",
-    "build": "npm run build_browser && npm run build_user_interface",
-    "test": "npm run build_browser",
-    "dev": "webpack-dev-server --config=./build/webpack.browser-hot-loader.config.js --content-base dist/dev --hot --inline --host 0.0.0.0"
+    "build-deploy": "webpack --config build/deploy/webpack-deploy.config.js",
+    "build-wallet": "webpack --config build/webpack-wallet.config.js",
+    "build-wallet-analyzer": "webpack --config build/webpack-wallet.config.js --mode development --analyzer",
+    "build": "npm run build-wallet && npm run deploy",
+    "test": "npm run build-wallet",
+    "dev": "webpack-dev-server --config=./build/webpack-hot-loader.config.js --content-base dist/dev --hot --inline --host 0.0.0.0"
   },
   "dependencies": {
     "@babel/polyfill": "~7.2",
