--- a/.gitignore
+++ b/.gitignore
@@ -82,7 +82,6 @@ typings/
 
 # Nuxt.js build / generate output
 .nuxt
-dist
 
 # Gatsby files
 .cache/
@@ -104,3 +103,7 @@ dist
 
 # TernJS port file
 .tern-port
+
+
+dist/build/assets
+dist/dev/assets
