--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "~7.2",
+    "fetch-progress": "^1.3.0",
     "file-saver": "^2.0.5",
     "qrcode-vue": "^1.2.0",
     "strength": "^0.1.4",
