--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@hcaptcha/vue-hcaptcha": "^0.3.0",
     "file-saver": "^2.0.5",
     "install": "^0.13.0",
+    "localforage": "^1.9.0",
     "npm": "^7.19.1",
     "qrcode-vue": "^1.2.0",
     "strength": "^0.1.4",
