--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "localforage": "^1.9.0",
     "npm": "^7.19.1",
     "qrcode-vue": "^1.2.0",
+    "sanitize-html": "^2.4.0",
     "strength": "^0.1.4",
     "v-tooltip": "^2.1.2",
     "vue": "^2.6.12",
