--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "localforage": "^1.9.0",
     "npm": "^7.19.1",
     "qrcode-vue": "^1.2.0",
+    "request": "^2.88.2",
+    "request-promise-native": "^1.0.9",
     "sanitize-html": "^2.4.0",
     "strength": "^0.1.4",
     "v-tooltip": "^2.1.2",
