--- a/package.json
+++ b/package.json
@@ -8,22 +8,21 @@
   "scripts": {
     "build-deploy": "webpack --config build/deploy/webpack-deploy.config.js",
     "build-wallet": "webpack --config build/webpack-wallet.config.js",
-    "build-pandorapay-webworker": "webpack --config build/webpack-pandorapay-websocket.config.js",
     "build-wallet-analyzer": "webpack --config build/webpack-wallet.config.js --mode development --analyzer",
-    "build": "npm run build-wallet && npm run deploy",
+    "build-pandorapay-webworker": "webpack --config build/webpack-pandorapay-websocket.config.js",
+    "build": "npm run build-wallet",
     "test": "npm run build-wallet",
     "dev": "webpack-dev-server --config=./build/webpack-hot-loader.config.js --content-base dist/dev --hot --inline --host 0.0.0.0"
   },
   "dependencies": {
-    "@babel/polyfill": "~7.2",
     "@hcaptcha/vue-hcaptcha": "^0.3.0",
+    "buffer": "^6.0.3",
     "file-saver": "^2.0.5",
     "install": "^0.13.0",
     "localforage": "^1.9.0",
+    "node-fetch": "^3.0.0",
     "npm": "^7.19.1",
     "qrcode-vue": "^1.2.0",
-    "request": "^2.88.2",
-    "request-promise-native": "^1.0.9",
     "sanitize-html": "^2.4.0",
     "strength": "^0.1.4",
     "v-tooltip": "^2.1.2",
@@ -31,17 +30,12 @@
     "vue-async-computed": "^3.9.0",
     "vue-clickaway": "^2.2.2",
     "vue-clipboard2": "^0.3.1",
-    "vue-qrcode-reader": "^2.3.16",
+    "vue-qrcode-reader": "^2.3.18",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@babel/core": "~7.2",
-    "@babel/plugin-proposal-class-properties": "~7.3",
-    "@babel/plugin-proposal-decorators": "~7.3",
-    "@babel/plugin-proposal-json-strings": "~7.2",
-    "@babel/plugin-syntax-dynamic-import": "~7.2",
-    "@babel/plugin-syntax-import-meta": "~7.2",
     "@babel/preset-env": "~7.3",
     "@webpack-cli/serve": "^1.3.0",
     "autoprefixer": "^9.8.6",
@@ -54,17 +48,19 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^5.1.0",
     "friendly-errors-webpack-plugin": "~1.7",
-    "html-webpack-plugin": "~3.2",
+    "git-revision-webpack-plugin": "^5.0.0",
+    "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "~0.5",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "uglifyjs-webpack-plugin": "~1.2",
-    "vue-loader": "~15.6",
+    "vue-loader": "^15.9.8",
     "vue-style-loader": "~4.1",
     "vue-template-compiler": "^2.6.12",
-    "webpack": "~4.29",
+    "webpack": "^5.57.1",
     "webpack-bundle-analyzer": "~3.3",
-    "webpack-cli": "~3.2",
-    "webpack-dev-server": "~3.1",
+    "webpack-cli": "^3.2.3",
+    "webpack-dev-middleware": "^5.2.1",
+    "webpack-dev-server": "^3.1.14",
     "webpack-hot-middleware": "~2.24",
     "webpack-merge": "~4.2"
   }
