--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "buffer": "^6.0.3",
     "decimal.js": "^10.3.1",
     "file-saver": "^2.0.5",
+    "i": "^0.3.7",
     "localforage": "^1.9.0",
     "node-fetch": "^3.0.0",
+    "npm": "^8.3.1",
     "password-strength-calc": "^1.0.3",
-    "qrcode-vue": "^1.2.0",
+    "qrcanvas-vue": "^2.1.1",
     "v-tooltip": "^2.1.2",
     "vue": "^2.6.12",
     "vue-async-computed": "^3.9.0",
