--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "build-pandorapay-helper-webworker": "webpack --config build/webpack-pandorapay-helper-websocket.config.js --mode production --production",
     "build": "npm run build-wallet && npm run build-pandorapay-webworker && npm run build-pandorapay-helper-webworker",
     "test": "npm run build-wallet",
-    "dev": "webpack-dev-server --config=./build/webpack-hot-loader.config.js --content-base dist/dev --hot --inline --host 0.0.0.0"
+    "dev": "webpack-dev-server --config=./build/webpack-hot-loader.config.js --hot --host 0.0.0.0"
   },
   "dependencies": {
-    "@hcaptcha/vue-hcaptcha": "^0.3.0",
+    "@hcaptcha/vue-hcaptcha": "^0.3.2",
     "buffer": "^6.0.3",
     "decimal.js": "^10.3.1",
     "file-saver": "^2.0.5",
@@ -24,15 +24,15 @@
     "node-fetch": "^3.0.0",
     "npm": "^8.3.1",
     "password-strength-calc": "^1.0.3",
-    "qrcanvas-vue": "^2.1.1",
-    "v-tooltip": "^2.1.2",
-    "vue": "^2.6.12",
-    "vue-async-computed": "^3.9.0",
-    "vue-clickaway": "^2.2.2",
-    "vue-clipboard2": "^0.3.1",
-    "vue-qrcode-reader": "^2.3.18",
-    "vue-router": "^3.5.1",
-    "vuex": "^3.6.2"
+    "qrcanvas-vue": "^3.0.0",
+    "v-tooltip": "^4.0.0-beta.17",
+    "vue": "^3.2.29",
+    "vue-clipboard2": "^0.3.3",
+    "vue-qrcode-reader": "^3.1.0",
+    "vue-router": "^4.0.12",
+    "vue3-async-computed": "^3.0.0",
+    "vue3-click-away": "^1.2.1",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@babel/core": "~7.2",
@@ -44,24 +44,24 @@
     "compression-webpack-plugin": "^7.1.2",
     "copy-webpack-plugin": "^5.1.2",
     "cross-env": "~5.2",
-    "css-loader": "~2.1",
+    "css-loader": "~6.6.0",
     "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^5.1.0",
+    "file-loader": "^6.2.0",
     "friendly-errors-webpack-plugin": "~1.7",
     "git-revision-webpack-plugin": "^5.0.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "~0.5",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "uglifyjs-webpack-plugin": "~1.2",
-    "vue-loader": "^15.9.8",
-    "vue-style-loader": "~4.1",
-    "vue-template-compiler": "^2.6.12",
-    "webpack": "^5.57.1",
-    "webpack-bundle-analyzer": "~3.3",
-    "webpack-cli": "^3.2.3",
-    "webpack-dev-middleware": "^5.2.1",
-    "webpack-dev-server": "^3.1.14",
-    "webpack-hot-middleware": "~2.24",
-    "webpack-merge": "~4.2"
+    "vue-loader": "^17.0.0",
+    "vue-style-loader": "~4.1.3",
+    "vue-template-compiler": "^2.6.14",
+    "webpack": "^5.68.0",
+    "webpack-bundle-analyzer": "~3.9.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-middleware": "^5.3.1",
+    "webpack-dev-server": "^4.7.4",
+    "webpack-hot-middleware": "~2.25.1",
+    "webpack-merge": "~4.2.2"
   }
 }
