--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "dev": "webpack-dev-server --config=./build/webpack-hot-loader.config.js --hot --host 0.0.0.0"
   },
   "dependencies": {
-    "@hcaptcha/vue-hcaptcha": "^0.3.2",
+    "@hcaptcha/vue3-hcaptcha": "^1.0.1",
     "buffer": "^6.0.3",
     "decimal.js": "^10.3.1",
     "file-saver": "^2.0.5",
@@ -30,7 +30,6 @@
     "vue-clipboard2": "^0.3.3",
     "vue-qrcode-reader": "^3.1.0",
     "vue-router": "^4.0.12",
-    "vue3-async-computed": "^3.0.0",
     "vue3-click-away": "^1.2.1",
     "vuex": "^4.0.2"
   },
@@ -41,13 +40,13 @@
     "autoprefixer": "^9.8.6",
     "babel-eslint": "~10.0",
     "babel-loader": "~8.0",
-    "compression-webpack-plugin": "^7.1.2",
-    "copy-webpack-plugin": "^5.1.2",
-    "cross-env": "~5.2",
+    "compression-webpack-plugin": "^9.2.0",
+    "copy-webpack-plugin": "^10.2.4",
+    "cross-env": "~7.0.3",
     "css-loader": "~6.6.0",
-    "extract-text-webpack-plugin": "^3.0.2",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^6.2.0",
-    "friendly-errors-webpack-plugin": "~1.7",
+    "friendly-errors-webpack-plugin": "~2.0.0-beta.2",
     "git-revision-webpack-plugin": "^5.0.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "~0.5",
