--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "devDependencies": {
     "@babel/core": "~7.2",
     "@babel/preset-env": "~7.3",
+    "@soda/friendly-errors-webpack-plugin": "^1.8.1",
     "@webpack-cli/serve": "^1.3.0",
     "autoprefixer": "^9.8.6",
     "babel-eslint": "~10.0",
@@ -45,7 +46,6 @@
     "cross-env": "~7.0.3",
     "css-loader": "~6.6.0",
     "file-loader": "^6.2.0",
-    "friendly-errors-webpack-plugin": "~2.0.0-beta.2",
     "git-revision-webpack-plugin": "^5.0.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "~0.5",
