--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "v-tooltip": "^4.0.0-beta.17",
     "vue": "^3.2.29",
     "vue-clipboard2": "^0.3.3",
-    "vue-qrcode-reader": "^3.1.0",
+    "vue-qrcode-reader": "^3.1.0-vue3-compatibility.2",
     "vue-router": "^4.0.12",
     "vuex": "^4.0.2"
   },
