minor changes webpack

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "scripts": {
     "build-wallet": "webpack --config build/webpack-wallet.config.js --mode=production",
     "build-wallet-analyzer": "webpack --config build/webpack-wallet.config.js --mode=production --analyzer",
-    "build-pandorapay-webworker": "webpack --config build/webpack-pandorapay-websocket.config.js --mode=production ",
-    "build-pandorapay-helper-webworker": "webpack --config build/webpack-pandorapay-helper-websocket.config.js --mode=production ",
+    "build-pandorapay-webworker": "webpack --config build/webpack-webworker.config.js --mode=production ",
+    "build-pandorapay-helper-webworker": "webpack --config build/webpack-helper-webworker.config.js --mode=production ",
     "build": "npm run build-wallet && npm run build-pandorapay-webworker && npm run build-pandorapay-helper-webworker",
     "test": "npm run build-wallet",
     "dev": "webpack-dev-server --config=./build/webpack-hot-loader.config.js --hot --host 0.0.0.0"
