--- a/.gitignore
+++ b/.gitignore
@@ -108,11 +108,13 @@ typings/
 dist/build/assets
 dist/build/wasm
 dist/build/workers
-dist/build/.html
+dist/build/*.html
 dist/build/*.js
+dist/build/*.gz
 
 dist/dev/assets
 dist/dev/wasm
 dist/dev/workers
-dist/dev/.html
+dist/dev/*.html
 dist/dev/*.js
+dist/dev/*.gz
