rename webpack files

--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
     "DEX"
   ],
   "scripts": {
-    "build-wallet": "webpack --config build/webpack-wallet.config.js",
-    "build-wallet-analyzer": "webpack --config build/webpack-wallet.config.js --mode=production --analyzer",
-    "build-webworker": "webpack --config build/webpack-webworker.config.js ",
-    "build-helper-webworker": "webpack --config build/webpack-helper-webworker.config.js",
-    "build": "npm run build-wallet -- --mode=production && npm run build-webworker -- --mode=production && npm run build-helper-webworker -- --mode=production",
+    "build-wallet": "webpack --config build/webpack-ui.config.js",
+    "build-wallet-analyzer": "webpack --config build/webpack-ui.config.js --mode=production --analyzer",
+    "build-webworker-wasm": "webpack --config build/webpack-webworker-wasm.config.js ",
+    "build-webworker-wasm-helper": "webpack --config build/webpack-webworker-wasm-helper.config.js",
+    "build": "npm run build-wallet -- --mode=production && npm run build-webworker-wasm -- --mode=production && npm run build-webworker-wasm-helper -- --mode=production",
     "test": "npm run build-wallet",
-    "dev": "npm run build-webworker && npm run build-helper-webworker && webpack-dev-server --config=./build/webpack-wallet-hot-loader.config.js --hot --host 0.0.0.0"
+    "dev": "npm run build-webworker-wasm && npm run build-webworker-wasm-helper && webpack-dev-server --config=./build/webpack-ui-dev-server.config.js --hot --host 0.0.0.0"
   },
   "dependencies": {
     "@hcaptcha/vue3-hcaptcha": "^1.0.1",
